# easyLinux

./: README.md
buildroot/: Config.in  Makefile  easylinux_mkimage.sh  easylinux_patch.sh  easylinux_patch_clean.sh
buildroot/board/samsung/common/: busybox.config  linux.config  uboot.mk
buildroot/board/samsung/helix/: uboot.mk
buildroot/boot/uboot/: uboot.mk
buildroot/configs/: easylinux_tools_defconfig  gt2440_defconfig
buildroot/easylinux/: Config.in  easylinux.mk
buildroot/easylinux/core/: Config.in  core.mk
buildroot/easylinux/demo/: Config.in  demo.mk
buildroot/easylinux/demodriver/: Config.in  demodriver.mk
buildroot/easylinux/platform/: Config.in  platform.mk
buildroot/easylinux/procmgr/: Config.in  procmgr.mk
buildroot/easylinux/sdk/: Config.in  sdk.mk
buildroot/ext/arm9/usr/arm-easylinux-linux-uclibcgnueabi/lib/: libatomic.la  libatomic.so.1.0.0  libgcc_s.so.1  libitm.la  libitm.so.1.0.0  libstdc++.la  libstdc++.so.6.0.19  libsupc++.la
buildroot/ext/arm9/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/lib/: libstdc++.so.6.0.19-gdb.py
buildroot/ext/arm9/usr/include/: gmp.h
buildroot/ext/arm9/usr/lib/: libfakeroot.la  libgmp.la  libgmp.so.10.2.0  libmpc.la  libmpc.so.3.0.0  libmpfr.la  libmpfr.so.4.1.2
buildroot/ext/arm9/usr/libexec/gcc/arm-easylinux-linux-uclibcgnueabi/4.8.4/: collect2  liblto_plugin.la  liblto_plugin.so.0.0.0  lto-wrapper
buildroot/ext/arm9/usr/share/man/man1/: arm-easylinux-linux-uclibcgnueabi-ld.1
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/lib/: libatomic.la  libatomic.so.1  libitm.la  libitm.so.1.0.0  libstdc++.la  libstdc++.so.6.0.19  libsupc++.la
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/lib/: libcrypt.so.0  libgcc_s.so.1
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/include/asm/: ..install.cmd
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/include/asm-generic/: ..install.cmd
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/include/bits/: sysnum.h  uClibc_config.h
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/include/drm/: ..install.cmd
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/include/linux/: ..install.cmd  version.h
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/include/misc/: ..install.cmd
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/include/mtd/: ..install.cmd
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/include/rdma/: ..install.cmd
buildroot/ext/usr/arm-easylinux-linux-uclibcgnueabi/sysroot/usr/lib/: libstdc++.so.6.0.19-gdb.py
buildroot/ext/usr/include/: gmp.h
buildroot/ext/usr/lib/: libfakeroot.la  libgmp.la  libgmp.so.10.2.0  libmpc.la  libmpc.so.3.0.0  libmpfr.la  libmpfr.so.4.1.2
buildroot/ext/usr/libexec/gcc/arm-easylinux-linux-uclibcgnueabi/4.8.4/: collect2  liblto_plugin.la  liblto_plugin.so.0.0.0  lto-wrapper
buildroot/ext/usr/share/buildroot/: toolchainfile.cmake
buildroot/ext/usr/share/man/man1/: arm-easylinux-linux-uclibcgnueabi-g++.1  arm-easylinux-linux-uclibcgnueabi-ld.1
buildroot/ext/usr/share/man/man7/: gpl.7
buildroot/fs/cpio/: cpio.mk
buildroot/fs/cramfs/: cramfs.mk
buildroot/fs/jffs2/: jffs2.mk
buildroot/fs/squashfs/: squashfs.mk
buildroot/fs/yaffs2/: yaffs.mk
buildroot/image/: mkimage_flash.py  mkimage_up.py
buildroot/package/: Config.in  pkg-generic.mk
doc/: EasyLinux平台编译系统概要设计.docx  EasyLinux平台编译系统设计.docx  freshfilesystem.txt
kernel/: linux.md
sdk/: sdk.md
src/application/app/demo/: CMakeLists.txt
src/application/app/demo/src/: demo.c
src/application/drivers/demodriver/: Makefile  demodriver.c
src/application/include/common/: common.h
src/application/lib/: CMakeLists.txt
src/platform/app/core/: CMakeLists.txt
src/platform/app/core/etc/: start_system.sh
src/platform/app/core/include/: core.h
src/platform/app/core/src/: core_main.c
src/platform/app/procmgr/: CMakeLists.txt
src/platform/app/procmgr/etc/: inittab  start_system.sh
src/platform/app/procmgr/include/: procmgr.h
src/platform/app/procmgr/src/: procmgr.c
src/platform/include/common/: eaTypes.h
src/platform/include/lib/: base.h  demo.h  init.h  libprocmgr.h  mid.h  pid.h  procmgr_app.h
src/platform/lib/: CMakeLists.txt
src/platform/lib/base/: base_core.c  base_mod.c  mid.c  mm_plugin.c  pid.c
src/platform/lib/config/: README.md
src/platform/lib/debug/: README.md
src/platform/lib/demo/: demo.c
src/platform/lib/init/: platform_init.c
src/platform/lib/msg/: README.md
src/platform/lib/notify/: README.md
src/platform/lib/procmgr/: libprocmgr.c  procmgr_app.c
src/platform/lib/rpc/: README.md
src/platform/lib/shm/: README.md
src/platform/lib/timer/: README.md
src/platform/lib/xml/: README.md
(+79 files in other folders)
